# ChangeLog for dev-db/mariadb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb/ChangeLog,v 1.70 2014/10/22 19:20:12 maekke Exp $

  22 Oct 2014; Markus Meier <maekke@gentoo.org> mariadb-5.5.40-r1.ebuild:
  arm stable, bug #525504

*mariadb-10.0.14-r1 (19 Oct 2014)

  19 Oct 2014; Brian Evans <grknight@gentoo.org> +mariadb-10.0.14-r1.ebuild:
  Revbump to fix mysql_config embedded libs location and tokudb patch

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40-r1.ebuild:
  Stable for sparc, wrt bug #525504

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40-r1.ebuild:
  Stable for ia64, wrt bug #525504

*mariadb-5.5.40-r1 (17 Oct 2014)

  17 Oct 2014; Brian Evans <grknight@gentoo.org> +mariadb-5.5.40-r1.ebuild,
  -mariadb-5.5.40.ebuild:
  Revbump to fix bug 525644. Committed directly to stable as this was a header
  only change for security bug 525504

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for ppc64, wrt bug #525504

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for ppc, wrt bug #525504

  17 Oct 2014; Jeroen Roovers <jer@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for HPPA (bug #525504).

  16 Oct 2014; Tobias Klausmann <klausman@gentoo.org> mariadb-5.5.40.ebuild:
  Stable on alpha, bug 525504

  16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for x86, wrt bug #525504

  16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for amd64, wrt bug #525504

  15 Oct 2014; Brian Evans <grknight@gentoo.org> -mariadb-10.0.12.ebuild:
  Drop old

*mariadb-5.5.40 (09 Oct 2014)

  09 Oct 2014; Brian Evans <grknight@gentoo.org> +mariadb-5.5.40.ebuild:
  Version bump on 5.5 series

  08 Oct 2014; Brian Evans <grknight@gentoo.org> +files/my.cnf-5.6:
  Add new 5.6 configs to better match upstream wrt bug 524768
