@@ -5,22 +5,23 @@ AUX my.cnf-5.1 4829 SHA256 109d4db271860f646df0a1317a2812ffe4b51785aca423bf539e9
 AUX my.cnf-5.5 4916 SHA256 b579073c015719b9623e2e00a985587947bb3562958f6e6f555306021b56d1e6 SHA512 93a79e4807d7fc6cb196445fa885c334ca86981513a0b716bf39f3bca76a7cdfeb62044bae7c44943c683e698a5fc4afe9a8d92fd1d03fce57531abd1947fb68 WHIRLPOOL 05dbc74ade9943d3752e2123449802ec8f5f743aaf0280325c8512f85aca0c3e70acae2eef0f4d1edfb5fde2891a58cf58e6deb3d1f9b0adc1e0c7597ee98607
 AUX my.cnf-5.6 4687 SHA256 dc94a99e91d082b47c0ceb10badbf12a44c5ab7f60710bcc2e5f136328856d05 SHA512 8e568f6002a1bef3be73e6e0811fd2479c0611fe8f55175e114d622860801429ebfafd6fcff7c9f38679185fc660b100d24fe599b0424cc73e776bf5c0aeb3a3 WHIRLPOOL b5800fb149a99582f4866079946ba744efda79abbffcea2db495566daab03e6a55f7df1adf63f11c43c240ba5c1df64fea233f60481d27430729011563afe209
 DIST mariadb-10.0.14.tar.gz 51156364 SHA256 ac0eca4ebb278aa304236bf6dbd5e8c9cf285431333f1379051c231c08e2e31d SHA512 9bb4466f4a71dd85e5811c3117208a6687815b60075beca341c281f5f919b7d6007d2c706f6916d135c7d1d4b02d57f7afb4d97cfac36a61195d994f8a269f17 WHIRLPOOL 3b1e76bc2f3f668bb73cc4159fc09d1757cb32555ea5a0e40a12112cdf101d0be01d93384e4e28a5247f1ea6e0811ed0582325bcd2e37f253cf79fe2d195ee35
-DIST mariadb-5.5.39.tar.gz 45084762 SHA256 cb850865ab55ce5f01c99a612cc75b76ead5d75adfa75a606f453d32f9089d14 SHA512 a16685dce416449da5e004eaacc2e33d45ba437d91a117ef6c44c09f19186cafe626a87d25ebc67cbf08c0d57d61a3622dd9df9004c541a7bc46be82642b5a67 WHIRLPOOL d1c3efdb2ff4de1830e8d5f03709b7c7a1e037a07902fce3253473a241b62f15b3ccb54896e4ca048ecd952acc84577cfc0788632a2c4aa77694f86fe48f1089
 DIST mariadb-5.5.40.tar.gz 44745240 SHA256 cbde17f4a31483143490def6fcce33310ebae49eafe92dc4ada0e7227202415a SHA512 178b77d95bcd72bd8ec7840e77a6c7156379d676ff65eeb9a9f58897c4476f2dcd8f390ddaf12471d836f0224d7dec3aebeaa6fd1589ffae071f1eba4ed60eac WHIRLPOOL 1c6462b73c9ed8a5c7a16d327e066c92280a61ccfe28e5b28ea274fa711df4ae5cc06d7dbab3fa1b225c255ddaa4bbb4dfe71906a6e5ac72de5d550581935213
-DIST mysql-extras-20140817-2320Z.tar.bz2 1495153 SHA256 9a32dcc646c86cb8f9a941f4da6fd9fc183c0bd60faf47331d465e422ff7b8ac SHA512 d4eb8451a894206cc2d1f3431f6106a910495d357cc07b4e6088b545fc39a995a1d230a307467da73c8c6b11efa0eda634150e09a486a9c53fb063c7fa8d9bbc WHIRLPOOL f57573e6d3ca9f37c666848f07f65f963ed70cfe4e3408730e96be68073251a7611cad068c1d84a5fbfe42ee7c5f9e161d7962dcf591e6eae856ef1cfd286e9f
 DIST mysql-extras-20140924-1913Z.tar.bz2 1494659 SHA256 958114bbe5fe21220f27b478c67a9ad3edd8d88fc58b528c6e7b5cf20e46dabb SHA512 b5fc435804b5843ecb9e522dbc8c6b5d2bb9bc8a7c39633032aaf566f2a2488fc6c0017a92dd6db95db6c14d06d25c43a67fb2387818a0060611c3c811491037 WHIRLPOOL a6a3b1953180923882de75d2e15cdbbf29f42c90947c88e1b29ceee3a2d8094eb5ee015ce2f38b13dbb84d52120be9e867618c90b655ffeec10d32947ce625d0
 DIST mysql-extras-20141017-1419Z.tar.bz2 1494065 SHA256 b872d1d8b55d56dfd581b7ae416ed7d1f36c8f3cf28e817a3ff21b87d6627918 SHA512 b489f6c3bfc3a48156c8d1278e90e3077604a15a37335a84ebdd6f156a5c088fe0a2725a14431bd5dc07f8007fd80f0ec732c37b3d584373a2a12ba3ea9f999e WHIRLPOOL 35408618fe0d3f812564b0e78f813faa024fd7ff57bef50ef5511cced47047e15d038ea14aaf46cba6252932561f0200b49dd1dbe552b5d30eb1ab648a51a493
 DIST mysql-extras-20141019-1948Z.tar.bz2 1494569 SHA256 9a2ced701ef613e2a41c9a1fc550d9004d04f52cbfc06bb634ba9284d7a1c0ea SHA512 c9e3f3a447f010be0563b9d9ee2937d32c5334b04a883218eb6c14af41f9de635c3c0c44128959793e8a12ca3b26b2415777a13aced7c3812ab2c6d21ade6799 WHIRLPOOL bc0c73ca86d59d18a76a047a920fc2f64d2b3246e6b64838127d26c5c55cb3fc1ce8833656f5eadba72ef651e1f6c3e75700f776a1205ab33ab6ee0064851b86
 EBUILD mariadb-10.0.14-r1.ebuild 3964 SHA256 8a01217679b47602414e52dd9a139c42ab042f5253a79b0b2c4f7dd205220e97 SHA512 b5d218b96e3bc55cac4ad54b4d123f24269616c9a773e7bcabab04159c16ff4383240941c79f92f099e308ceda0ef2804bf740a079e8bd96015d27f2f32ae23b WHIRLPOOL 61ed177b3c19cb1d3e64b77e05043380bc3086d4d2f1a1ad28ea0d86d554eb02569556539e5ceac64e53c7d0fbf16a66cbae61e04afb2aeccaee1d2d95538191
 EBUILD mariadb-10.0.14.ebuild 3961 SHA256 fe748747cbfdfceefb74150a1e48164669ec07589d61d11b0eb75955559a023b SHA512 e3bdef97ec5f54bd2471e62960228933a5c19fbde0d0326f586b2326ed3793dee6cf892f6d5b17f15f9925339158d186080839f16c1f7a4227484b03cf3b07fd WHIRLPOOL a3bb18d10a297ff2c8da10980c2b7c62018778ba7589413adb7f3d7098be9f79242d0ab4d827928062fb3faf144aa9fb3bc47d6228071e002eaf3a6e10e69ffa
-EBUILD mariadb-5.5.39.ebuild 3929 SHA256 efe94a248bf2b54429ab492f9d85c811676785a87fb0f291992f03278e8752c0 SHA512 16fe762c96bec6f60238539349e5f932814851918f0eaa8423c75386845a6211024e007978099f102bbe848e5b3e0f7dca7161a335294e498aa902f2fec0f6ca WHIRLPOOL c66df1b41774a19d98811a8e8b3b453029f1bc66c95f178ff2df289d2852cb0b74cdc975041f33a01fd18cc51270ccd60482e13ac748a8a8adf6fb4844f3d329
 EBUILD mariadb-5.5.40-r1.ebuild 4136 SHA256 402a3d89fa048a84dd3f01eba236e30c2d1f953a5b5c2c3448251c028ee8e560 SHA512 d0ba7167e6fd4cc8c77225fcb734a1db1244d43e8f1b2f640d49686339a3d73bbcd1e6cf5a134737d0308d36fe2463bef2e784ebef87cb99cd8a3627485c46e8 WHIRLPOOL d19b191c74e93250d24dc37ae8972ecb6270cf5910eb40148ccb9217456acc30ade32a5e992dea0864727472d59aa88c63b7d32115d5b66f95fb50549bc2bd5c
-MISC ChangeLog 12423 SHA256 31bf57a01d624b21426e6ef31c4b9bc578e6c49f82c45bf378393aacd2d3d760 SHA512 ffd11816105a2c6efee4de87529a7839c1cbe5c5cb6a96258f79c22b13d4aaddc930cacbc2c798a1bee78551503b4c485a73d9a2595d278e289c479a33d0d3ec WHIRLPOOL 1d3b71428b22a00267b3bfcbbb1965874aa1d2b348f3eb50fd014128b2df470b5db2f99540fad384542a3d1daf3b36f9a55bcd9f57e9eaca8dff030bd8d85660
+MISC ChangeLog 12525 SHA256 8b2e821a154eae673029086f48977cb5f72290049eff48256415efdba08056e0 SHA512 43e1988672809b20113c0532c1348203919e6000a6286cc4ec0b8487584327d1250d56c96100f5478a3f60446390864e298b8cd8d1c95e8d596c69f6e177db81 WHIRLPOOL 6572342e4ac3fae1b811bae161a875dffdfe6db0d3968b3055274bb219855d11e2c3dcf42b74738b7d4df420d3fb353086c118a5aad59eeb0e974fdf614d7705
 MISC metadata.xml 1415 SHA256 430ec7d576a92391d07ab1da50ded0e5f1344398b883bfc9e1ff5c49697d7bba SHA512 2e6623f94ec3be8458b6404d2e7c3908e654bef176ee56f8fe99dd0367e97890023dc4912179cb04bb4f7d69ad738f0946c6ef7830b6a6b2f6d449244332380d WHIRLPOOL 05ae047384acaee2245dbd39a4d810172e89e4fefd1276c0db1022154eb4c1273d24d1e8f773928f21a29bbdaa86fcc86e27de4a24f7692f917156290f322b35
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRIA20ACgkQkKaRLQcq0GIxwwCeNkpjT3+eMnXh1o6SSWYa9K1u
-vxIAoKPKwBk3/pfY1ENUzo8IyDzJ8GPi
-=GZ+x
+iQEcBAEBCAAGBQJUSEevAAoJEE4V4vFnx44dgpsH/1HDGhhcyVxIFV/UGO8VddNq
+oY/oqeh+xOsyAKIUNUi/RAHl2jAgE/1Kmdul7iJmGC0oBzC/dfSqIqklcQFNjdz+
+KZWWt5+2d387qbrOjz3D5TjG1geCC7CEIki8WGlYwQUaLC9YjMqo3xo6VXcDYgau
+JkTexXmpEwEG6XsC5F+T6vgzsLM9YRDLIWSgP8g8MjPVG70ReJIyzotHWIz1WLxF
+fwa0bwOKAl7I08aVyJtpkEeqHtx1VEFhAb3uz4iG/fmtaf1gvKi6ck2cWUa+vq/3
+rq6scq5NLun5ENqGGx1M6nHK2XK/kdXlwY2Oena1QYsl4v2xwrG0EzqRzUYQWNA=
+=n0DC
 -----END PGP SIGNATURE-----
