@@ -1,15 +1,0 @@
-DEFINED_PHASES=compile config configure install postinst postrm preinst prepare setup test unpack
-DEPEND=|| ( >=sys-devel/gcc-3.4.6 >=sys-devel/gcc-apple-4.0 ) sys-devel/gnuconfig sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) ssl? ( >=dev-libs/openssl-0.9.6d ) kernel_linux? ( sys-process/procps ) >=sys-apps/sed-4 >=sys-apps/texinfo-4.7-r1 >=sys-libs/zlib-1.2.3 !bindist? ( >=sys-libs/readline-4.1 ) oqgraph? ( >=dev-libs/boost-1.40.0 ) !minimal? ( pam? ( virtual/pam ) ) perl? ( !dev-db/mytop ) !dev-db/mysql !dev-db/mariadb-galera !dev-db/percona-server !dev-db/mysql-cluster jemalloc? ( dev-libs/jemalloc[static-libs?] ) tcmalloc? ( dev-util/google-perftools ) >=sys-libs/zlib-1.2.3[static-libs?] ssl? ( >=dev-libs/openssl-0.9.6d[static-libs?] ) systemtap? ( >=dev-util/systemtap-1.3 ) kernel_linux? ( dev-libs/libaio ) virtual/yacc static? ( sys-libs/ncurses[static-libs] ) >=dev-util/cmake-2.4.3 >=dev-util/cmake-2.6.3
-DESCRIPTION=An enhanced, drop-in replacement for MySQL
-EAPI=5
-HOMEPAGE=http://mariadb.org/
-IUSE=bindist debug embedded minimal +perl selinux ssl static static-libs test latin1 extraengine cluster max-idx-128 +community profiling oqgraph sphinx pam tokudb jemalloc tcmalloc systemtap
-KEYWORDS=alpha amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
-LICENSE=GPL-2
-PDEPEND=perl? ( >=dev-perl/DBD-mysql-2.9004 ) ~virtual/mysql-5.5
-RDEPEND=ssl? ( >=dev-libs/openssl-0.9.6d ) kernel_linux? ( sys-process/procps ) >=sys-apps/sed-4 >=sys-apps/texinfo-4.7-r1 >=sys-libs/zlib-1.2.3 !bindist? ( >=sys-libs/readline-4.1 ) oqgraph? ( >=dev-libs/boost-1.40.0 ) !minimal? ( pam? ( virtual/pam ) ) perl? ( !dev-db/mytop ) !dev-db/mysql !dev-db/mariadb-galera !dev-db/percona-server !dev-db/mysql-cluster jemalloc? ( dev-libs/jemalloc[static-libs?] ) tcmalloc? ( dev-util/google-perftools ) >=sys-libs/zlib-1.2.3[static-libs?] ssl? ( >=dev-libs/openssl-0.9.6d[static-libs?] ) systemtap? ( >=dev-util/systemtap-1.3 ) kernel_linux? ( dev-libs/libaio ) !minimal? ( !prefix? ( dev-db/mysql-init-scripts ) ) selinux? ( sec-policy/selinux-mysql ) perl? ( virtual/perl-Getopt-Long dev-perl/TermReadKey virtual/perl-Term-ANSIColor virtual/perl-Time-HiRes )
-REQUIRED_USE=minimal? ( !oqgraph ) minimal? ( !sphinx ) tokudb? ( jemalloc ) tcmalloc? ( !jemalloc ) jemalloc? ( !tcmalloc ) minimal? ( !cluster !extraengine !embedded ) static? ( !ssl )
-SLOT=0
-SRC_URI=http://ftp.osuosl.org/pub/mariadb/mariadb-5.5.39/kvm-tarbake-jaunty-x86/mariadb-5.5.39.tar.gz http://ftp.osuosl.org/pub/mariadb/mariadb-5.5.39/source/mariadb-5.5.39.tar.gz http://mirror.jmu.edu/pub/mariadb/mariadb-5.5.39/kvm-tarbake-jaunty-x86/mariadb-5.5.39.tar.gz http://mirrors.coreix.net/mariadb/mariadb-5.5.39/kvm-tarbake-jaunty-x86/mariadb-5.5.39.tar.gz http://mirrors.syringanetworks.net/mariadb/mariadb-5.5.39/kvm-tarbake-jaunty-x86/mariadb-5.5.39.tar.gz http://mirrors.fe.up.pt/pub/mariadb/mariadb-5.5.39/kvm-tarbake-jaunty-x86/mariadb-5.5.39.tar.gz http://mirror2.hs-esslingen.de/mariadb/mariadb-5.5.39/kvm-tarbake-jaunty-x86/mariadb-5.5.39.tar.gz mirror://gentoo/mysql-extras-20140817-2320Z.tar.bz2 http://g3nt8.org/patches/mysql-extras-20140817-2320Z.tar.bz2 http://dev.gentoo.org/~robbat2/distfiles/mysql-extras-20140817-2320Z.tar.bz2 http://dev.gentoo.org/~jmbsvicetto/distfiles/mysql-extras-20140817-2320Z.tar.bz2 http://dev.gentoo.org/~grknight/distfiles/mysql-extras-20140817-2320Z.tar.bz2
-_eclasses_=cmake-utils	9b9240b47b8dd08ad95a619ec16c39bd	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	gnuconfig	ee02e61d6c68cee478e2e69214b7caef	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	mysql-cmake	1f6618e5b3ea74dec99af103829e6199	mysql-v2	99a4b41fb9b05d534873b1d68bc0816e	mysql_fx	ab94d85c3c822792c72f7eeff96f2365	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	6ce35cb0d56d962486c858d41604c820	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=820bed9867656aefb4ca07e402348bf6
