@@ -3,10 +3,10 @@ DEPEND=sys-devel/gnuconfig >=sys-devel/binutils-config-1.9 zlib? ( sys-libs/zlib
 DESCRIPTION=Tools necessary to build programs
 HOMEPAGE=http://sourceware.org/binutils/
 IUSE=cxx multislot multitarget nls static-libs test vanilla zlib
-KEYWORDS=~alpha ~amd64 arm arm64 hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh ~sparc ~x86 -amd64-fbsd -sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha ~amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh ~sparc ~x86 -amd64-fbsd -sparc-fbsd ~x86-fbsd
 LICENSE=|| ( GPL-3 LGPL-3 )
 RDEPEND=>=sys-devel/binutils-config-1.9 zlib? ( sys-libs/zlib )
 SLOT=0
 SRC_URI=mirror://gnu/binutils/binutils-2.24.tar.bz2 mirror://gentoo/binutils-2.24-patches-1.4.tar.xz http://dev.gentoo.org/~vapier/dist/binutils-2.24-patches-1.4.tar.xz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	gnuconfig	ee02e61d6c68cee478e2e69214b7caef	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-binutils	19b1a99507102595bf8c1d9a6fda518a	toolchain-funcs	6ce35cb0d56d962486c858d41604c820	unpacker	f300a7ca9131b1024a79762e8edd3c52	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=3bb81466e21bc2107fdc5368a00f5865
+_md5_=6eb1f4169b4f77813d41f8261ed91c47
