@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/binutils-2.24-r3.ebuild,v 1.3 2014/10/22 23:37:55 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/binutils-2.24-r3.ebuild,v 1.4 2014/10/23 00:14:32 blueness Exp $
 
 PATCHVER="1.4"
 ELF2FLT_VER=""
 inherit toolchain-binutils
 
-KEYWORDS="~alpha ~amd64 arm arm64 hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh ~sparc ~x86 -amd64-fbsd -sparc-fbsd ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh ~sparc ~x86 -amd64-fbsd -sparc-fbsd ~x86-fbsd"
