@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/binutils
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.518 2014/10/22 23:37:55 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.519 2014/10/23 00:14:32 blueness Exp $
+
+  23 Oct 2014; Anthony G. Basile <blueness@gentoo.org> binutils-2.24-r3.ebuild:
+  Stable ppc and ppc64, bug #526482
 
   22 Oct 2014; Mike Frysinger <vapier@gentoo.org> binutils-2.24-r3.ebuild:
   Mark arm/arm64/ia64/m68k/s390/sh stable #526482.
