@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mariadb
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb/ChangeLog,v 1.70 2014/10/22 19:20:12 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb/ChangeLog,v 1.71 2014/10/23 00:11:17 grknight Exp $
+
+  23 Oct 2014; Brian Evans <grknight@gentoo.org> -mariadb-5.5.39.ebuild:
+  Drop old wrt bug 525504
 
   22 Oct 2014; Markus Meier <maekke@gentoo.org> mariadb-5.5.40-r1.ebuild:
   arm stable, bug #525504
